--- a/translations/help+intl-icu.fr.xlf
+++ b/translations/help+intl-icu.fr.xlf
@@ -2919,7 +2919,7 @@ Leider ist es unmöglich, Karten von diesen Gebäuden aufzustöbern. Aber es bes
       <segment>
         <source>Zwischen dem Auftauchen der Verdammten und diesen Gebäuden besteht ein Zusammenhang. Es ist darum kein Wunder, dass Plünderer keine Zeit hatten, sie in Ruhe zu durchsuchen. Sie beherbergen darum noch immer zahlreiche Ressourcen und Baupläne. 
 Leider ist es unmöglich, Karten von diesen Gebäuden aufzustöbern. Aber es besteht kein Zweifel daran, dass die einfachsten Mittel auch die effektivsten Mittel zum Durchsuchen dieser Orte sein werden.</source>
-        <target>Ces ruines ayant un lien avec l'origine des hordes, il est normal que les pillards n'aient pu les fouiller à loisir, ils contiennent donc de nombreuses ressources et plans de chantiers. Les cartes de ces bâtiments sont malheureusement impossibles à tracer, mais il ne fait aucun doute que les moyens les plus rudimentaires seront utilisés pour fouiller la zone le plus efficacement.</target>
+        <target>Ces ruines ayant un lien avec l'origine des hordes, il est normal que les pillards n'aient pu les fouiller à loisir, elles contiennent donc de nombreuses ressources et plans de chantiers. Les cartes de ces bâtiments sont malheureusement impossibles à tracer, mais il ne fait aucun doute que les moyens les plus rudimentaires seront utilisés pour fouiller la zone le plus efficacement.</target>
       </segment>
     </unit>
     <unit id="arLFfQ0">
