--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4054,5 +4054,46 @@
         <target>Automatic save of the forum text editor content</target>
       </segment>
     </unit>
+    <unit id="xu7yW0t" name="Alle Saisons auf MyHordes">
+      <notes>
+        <note category="german">Alle Saisons auf MyHordes</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+      </notes>
+      <segment>
+        <source>Alle Saisons auf MyHordes</source>
+        <target>All MyHordes Seasons</target>
+      </segment>
+    </unit>
+    <unit id="xrovccF" name="Alpha-Seelen">
+      <notes>
+        <note category="german">Alpha-Seelen</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+      </notes>
+      <segment>
+        <source>Alpha-Seelen</source>
+        <target>Alpha Souls</target>
+      </segment>
+    </unit>
+    <unit id="hTdNGcU" name="Es sind keine Spieler aufgelistet!">
+      <notes>
+        <note category="german">Es sind keine Spieler aufgelistet!</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+      </notes>
+      <segment>
+        <source>Es sind keine Spieler aufgelistet!</source>
+        <target>No players are listed yet.</target>
+      </segment>
+    </unit>
+    <unit id="QE5H6hD" name="Alte Seelen">
+      <notes>
+        <note category="german">Alte Seelen</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alte Seelen</source>
+        <target>Alte Seelen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
