--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4036,5 +4036,49 @@
         <target>Almacene en caché el contenido del editor de texto para mayor seguridad</target>
       </segment>
     </unit>
+    <unit id="xu7yW0t" name="Alle Saisons auf MyHordes">
+      <notes>
+        <note category="german">Alle Saisons auf MyHordes</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alle Saisons auf MyHordes</source>
+        <target>Alle Saisons auf MyHordes</target>
+      </segment>
+    </unit>
+    <unit id="xrovccF" name="Alpha-Seelen">
+      <notes>
+        <note category="german">Alpha-Seelen</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alpha-Seelen</source>
+        <target>Alpha-Seelen</target>
+      </segment>
+    </unit>
+    <unit id="hTdNGcU" name="Es sind keine Spieler aufgelistet!">
+      <notes>
+        <note category="german">Es sind keine Spieler aufgelistet!</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Es sind keine Spieler aufgelistet!</source>
+        <target>Es sind keine Spieler aufgelistet!</target>
+      </segment>
+    </unit>
+    <unit id="QE5H6hD" name="Alte Seelen">
+      <notes>
+        <note category="german">Alte Seelen</note>
+        <note category="from">twig:///templates/ajax/soul/season.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Alte Seelen</source>
+        <target>Alte Seelen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
