EN Translation for soul category

--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4092,7 +4092,7 @@
       </notes>
       <segment>
         <source>Alte Seelen</source>
-        <target>Alte Seelen</target>
+        <target>Old Souls</target>
       </segment>
     </unit>
   </file>
