--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -2645,7 +2645,7 @@
       </notes>
       <segment>
         <source>Bestätigen</source>
-        <target>Bestätigen</target>
+        <target>Confirm</target>
       </segment>
     </unit>
     <unit id="JUr1eVI" name="{d} Tage">
